RESOLVED FIXED293755
[visionOS] MediaPlayer changes while in external playback get stuck in the wrong rendering mode.
https://bugs.webkit.org/show_bug.cgi?id=293755
Summary [visionOS] MediaPlayer changes while in external playback get stuck in the wr...
Ryan Fuller
Reported 2025-05-29 12:44:46 PDT
When an HTMLVideoElement is in external playback and the MediaPlayer changes, it does not propogate the current inFullscreenOrPictureInPicture status to the new mediaPlayer, resulting in inFullscreenOrPictureInPicture not changing the accelerated rendering mode from entity to layer based when exiting external playback.
Attachments
Ryan Fuller
Comment 1 2025-05-29 12:44:48 PDT
Ryan Fuller
Comment 2 2025-05-29 12:55:03 PDT
EWS
Comment 3 2025-05-29 14:50:49 PDT
Committed 295573@main (ad09364a059e): <https://commits.webkit.org/295573@main> Reviewed commits have been landed. Closing PR #46070 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.